tests/negative/neg_pr118e_task_global_length_attribute.safe
-- Test: neg_pr118e_task_global_length_attribute
-- Description: Task bodies may not read package globals through `.length`.
-- Expected: REJECT task_variable_ownership

package neg_pr118e_task_global_length_attribute

   global_text : string (5) = "hello";

   task worker
      observed : integer = 0;

      loop
         observed = global_text.length;
